feat: update PHP version requirement to 8.4+ across documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       context: .
       dockerfile: devops/docker/nginx/Dockerfile
     volumes:
-      - ./:/app:cached
+      - ./app:/app:cached
     ports:
       - "8000:80"
     depends_on:
