--- a/app/.env
+++ b/app/.env
@@ -38,5 +38,5 @@ MAILER_DSN=smtp://hermio-mailcatcher-1:1025
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-DATABASE_URL="mysql://symfony:symfony@hermio-db-1:3306/dashinvoice?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://symfony:symfony@db:3306/hermio?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
