:sparkles: 003 Account Subscription

--- a/app/config/packages/framework.yaml
+++ b/app/config/packages/framework.yaml
@@ -8,6 +8,12 @@ framework:
     #esi: true
     #fragments: true
 
+    # Translator configuration
+    translator:
+        default_path: '%kernel.project_dir%/translations'
+        fallbacks:
+            - en
+
 when@test:
     framework:
         test: true
