--- a/app/composer.json
+++ b/app/composer.json
@@ -18,6 +18,7 @@
         "symfony/mailer": "8.0.*",
         "symfony/runtime": "8.0.*",
         "symfony/security-bundle": "8.0.*",
+        "symfony/translation": "8.0.*",
         "symfony/twig-bundle": "8.0.*",
         "symfony/validator": "8.0.*",
         "symfony/webpack-encore-bundle": "^2.4",
