:sparkles: Implement Stripe billing integration with subscription management

--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -21,3 +21,21 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Stripe services configuration
+    App\Service\StripeService:
+        arguments:
+            $stripeSecretKey: '%env(STRIPE_SECRET_KEY)%'
+
+    App\Service\StripeCheckoutService:
+        arguments:
+            $successUrl: '%env(DEFAULT_URI)%/subscription/checkout/success'
+            $cancelUrl: '%env(DEFAULT_URI)%/subscription/checkout/cancel'
+
+    App\Controller\StripeWebhookController:
+        arguments:
+            $webhookSecret: '%env(STRIPE_WEBHOOK_SECRET)%'
+
+    App\Controller\SubscriptionController:
+        arguments:
+            $defaultUri: '%env(DEFAULT_URI)%'
