:sparkles: Add multi-user support with team roles and card assignments

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -20,3 +20,8 @@ yarn-error.log
 /public/uploads/branding/logos/*
 !/public/uploads/branding/logos/.gitkeep
 ###< branding uploads ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
