--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -43,3 +43,37 @@ services:
     App\Service\BrandingService:
         arguments:
             $projectDir: '%kernel.project_dir%'
+
+when@test:
+    services:
+        # Make services public for testing
+        App\Service\QuotaService:
+            public: true
+        App\Service\TeamInvitationService:
+            public: true
+        App\Service\TeamService:
+            public: true
+        App\Service\CardService:
+            public: true
+        App\Service\AccountService:
+            public: true
+        Symfony\Component\Mailer\MailerInterface:
+            public: true
+        
+        # Override Stripe services configuration for tests with dummy values
+        App\Service\StripeService:
+            arguments:
+                $stripeSecretKey: 'sk_test_dummy_key_for_testing'
+        
+        App\Service\StripeCheckoutService:
+            arguments:
+                $successUrl: 'http://localhost/subscription/checkout/success'
+                $cancelUrl: 'http://localhost/subscription/checkout/cancel'
+        
+        App\Controller\StripeWebhookController:
+            arguments:
+                $webhookSecret: 'whsec_test_dummy_secret_for_testing'
+        
+        App\Controller\SubscriptionController:
+            arguments:
+                $defaultUri: 'http://localhost'
