--- a/devops/docker/app/Dockerfile
+++ b/devops/docker/app/Dockerfile
@@ -13,8 +13,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libzip-dev \
     libonig-dev \
     zlib1g-dev \
+    libpng-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
     unzip \
- && docker-php-ext-install -j"$(nproc)" intl opcache pdo pdo_mysql zip \
+ && docker-php-ext-configure gd --with-freetype --with-jpeg \
+ && docker-php-ext-install -j"$(nproc)" intl opcache pdo pdo_mysql zip gd \
  && rm -rf /var/lib/apt/lists/*
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
