--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,6 @@ services:
       dockerfile: devops/docker/nginx/Dockerfile
     volumes:
       - ./app:/app:cached
-    ports:
-      - "8000:80"
     depends_on:
       - app
 
@@ -48,8 +46,6 @@ services:
   redis:
     image: redis:alpine
     command: ["redis-server", "--save", "", "--appendonly", "no"]
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
 
@@ -57,8 +53,6 @@ services:
     image: phpmyadmin:latest
     depends_on:
       - db
-    ports:
-      - "8081:80"
     environment:
       PMA_HOST: db
       PMA_USER: root
@@ -67,11 +61,14 @@ services:
       MEMORY_LIMIT: 256M              # (optionnel)
       POST_MAX_SIZE: 100M             # (optionnel)
 
-  mailcatcher:
-    image: dockage/mailcatcher
+  mailer:
+    image: axllent/mailpit
     ports:
-      - "1080:1080"
-      - "1025:1025"
+      - "1125"
+      - "8025"
+    environment:
+      MP_SMTP_AUTH_ACCEPT_ANY: 1
+      MP_SMTP_AUTH_ALLOW_INSECURE: 1
 
 volumes:
   app_var:
