--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,10 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@fortawesome/fontawesome-free": "^7.1.0",
+        "@popperjs/core": "^2.11.8",
         "@symfony/webpack-encore": "^5.1.0",
+        "bootstrap": "^5.3.8",
         "core-js": "^3.38.0",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.95.1",
