:sparkles: Enhance QR code generation with optional logo support, improve pricing display with monthly/yearly toggle, and ensure iOS compatibility for vCard downloads

--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -44,6 +44,10 @@ services:
         arguments:
             $projectDir: '%kernel.project_dir%'
 
+    App\Controller\CardController:
+        arguments:
+            $projectDir: '%kernel.project_dir%'
+
 when@test:
     services:
         # Make services public for testing
